# mcp-dynamic-analysis-server

./: .dockerignore  .env.example  .gitignore  .python-version  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/sample_requests/: analyze_memcheck.json  compare_runs.json
examples/vulnerable/: Makefile  invalid_read.c  leak.c
scripts/: demo_end_to_end.py  demo_llm_flow.py  demo_r2_upload_flow.py
src/mcp_dynamic_analysis_server/: app.py  config.py  http_server.py  logging_config.py
src/mcp_dynamic_analysis_server/core/: artifact_registry.py  artifact_store.py  command_builder.py  compare.py  downloader.py  exceptions.py  normalizer.py  normalizer_asan.py  parser_asan.py  parser_memcheck.py  r2_client.py  runner.py  severity.py  severity_asan.py  validators.py
src/mcp_dynamic_analysis_server/models/: findings.py  requests.py  responses.py
src/mcp_dynamic_analysis_server/prompts/: judge_guidance.py
src/mcp_dynamic_analysis_server/resources/: artifact_resources.py
src/mcp_dynamic_analysis_server/tools/: analyze_memcheck.py  asan_run.py  compare_runs.py  create_upload_url.py  get_raw_artifact.py  get_report.py  list_findings.py
tests/: test_artifact_store.py  test_command_builder.py  test_compare_runs.py  test_parser_asan.py  test_parser_memcheck.py
tests/fixtures/: sample_memcheck.xml  sample_normalized_report.json
